<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_menu_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gazmend.com.mk.ready.AddNewMenuItemActivity">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_itemname"
                android:inputType="text"
                android:maxLines="1"
                android:focusable="true"
                android:textColor="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/description"
                android:layout_below="@+id/itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_itemdesc"
                android:inputType="text"
                android:maxLines="4"
                android:focusable="true"
                android:textColor="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/price"
                android:layout_below="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_itemprice"
                android:inputType="text"
                android:maxLines="1"
                android:focusable="true"
                android:textColor="@color/colorPrimary"
                />
            <Button
                android:id="@+id/addimage"
                android:layout_below="@+id/price"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_choose_item_image"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:focusable="true"
                android:contentDescription="@string/cd_addimage"
                android:background="@color/colorAccentTrans"/>
            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType = "centerCrop"
                android:src="@drawable/ready_logo"
                android:focusable="true"
                android:layout_below="@+id/addimage"/>
            <Button
                android:id="@+id/add_new_item"
                android:layout_below="@+id/itemImageView"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_add_item"
                android:textColor="@color/white"
                android:focusable="true"
                android:contentDescription="@string/cd_addnewitem"
                android:textStyle="bold"
                android:background="@color/colorAccentTrans"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
