<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="gazmend.com.mk.ready.LoginActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <!-- Login progress -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ready_logo"
        android:transitionName="profile"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLines="1"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLines="1"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_busname"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLines="1"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fullname"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLines="1"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                app:hintAnimationEnabled="false">
            <Spinner
                android:id="@+id/typespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Choose type"
                android:focusable="true"
                android:backgroundTint="@color/colorAccent"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:prompt="@string/spinner_title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_address"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:focusable="true"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/addloc"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_choose_bus_loc"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:focusable="true"
                android:contentDescription="@string/cd_addimage"
                android:background="@color/colorAccentTrans"/>
            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_loc"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:focusable="false"
                android:singleLine="true" />
            <Button
                android:id="@+id/addimage"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_choose_item_image"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:focusable="true"
                android:contentDescription="@string/cd_addimage"
                android:background="@color/colorAccentTrans"/>
            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType = "centerCrop"
                android:src="@drawable/ready_logo"
                android:layout_below="@+id/addimage"/>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:focusable="true"
                android:contentDescription="@string/cd_regbus"
                android:background="@color/colorAccentTrans"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</RelativeLayout>
