<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/toppart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        >
    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType = "centerCrop"
        android:src="@drawable/ready_logo"
        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bottompart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/leftpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            >
            <EditText
                android:id="@+id/itemName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_itemname"
                android:bufferType="spannable"
                android:inputType="textCapSentences|textMultiLine"
                android:editable="false"
                android:focusable="false"
                android:textSize="22sp"


                android:background="@android:color/transparent"
                android:gravity="left"/>
            <EditText
                android:id="@+id/itemDesc"
                android:layout_below="@+id/itemName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_itemdesc"
                android:bufferType="spannable"
                android:inputType="textCapSentences|textMultiLine"
                android:editable="false"
                android:focusable="false"
                android:textSize="14dp"


                android:background="@android:color/transparent"
                android:gravity="left"/>
            <EditText
                android:id="@+id/itemPrice"
                android:layout_below="@+id/itemDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_itemprice"
                android:bufferType="spannable"
                android:inputType="textCapSentences|textMultiLine"
                android:editable="false"
                android:focusable="false"

                android:textSize="14dp"

                android:background="@android:color/transparent"
                android:gravity="left"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/middlepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteicon"
                android:src="@mipmap/ic_close_black_24dp"
                android:focusable="true"
                android:contentDescription="@string/cd_remove_menu_item"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rightpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editicon"
                android:src="@mipmap/ic_mode_edit_black_24dp"
                android:focusable="true"
                android:contentDescription="@string/cd_edit_menu_item"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>